--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "next": "^15.5.6",
+    "package.json": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.8.1",
